--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,6 @@
 nrp_frontend_ip: "148.187.148.14"
-tunnel_ip: "148.187.96.176"
+tunnel_ip: "148.187.148.167"
+tunnel_port: "8080"
 tunnel_keyfile: "$HOME/nrp_launch/key-tunneluser"
 n_nodes: [2, 4, 8, 16, 32]
 n_cycles_nest: 100
