--- a/config.yaml
+++ b/config.yaml
@@ -2,7 +2,6 @@ nrp_frontend_ip: "148.187.148.14"
 tunnel_ip: "148.187.148.198"
 tunnel_port: "8080"
 tunnel_keyfile: "$HOME/bf_data/key-tunneluser"
-n_nodes: [2]
+n_nodes: [2, 4, 8, 16, 32]
 n_cycles_nest: 100
-repetitions: 1
 testcase: "hpcbench_notf"
