--- a/config.yaml
+++ b/config.yaml
@@ -4,5 +4,5 @@ tunnel_port: "8080"
 tunnel_keyfile: "$HOME/bf_data/key-tunneluser"
 n_tasks: [1, 2, 4, 8, 16, 32, 64]
 n_cycles_nest: 100
-testcase: "hpcbench_notf"
-repetitions: 4
+testcase: "robobrain"
+repetitions: 11
