Ignore RoboBrain log files

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ secrets.yaml
 tmp_benchmarks_results/*
 *.pyc
 Experiments/RoboBrain_benchmark/1_nrpexperiment_robobrain_mouse/resources/log/*
+typescript
